Initial import of AWD changes

--- a/meego-app-photos.desktop
+++ b/meego-app-photos.desktop
@@ -1,7 +1,7 @@
 
 [Desktop Entry]
 Version=1.0
-Name=MeeGo Photo Viewer
+Name=Photo
 Comment=View Photos
 GenericName=Photo Viewer
 Exec=meego-qml-launcher --opengl --cmd showAlbum --cdata %f --fullscreen --app meego-app-photos
@@ -12,3 +12,8 @@ Icon=meego-app-photos
 Categories=Graphics;2DGraphics;
 MimeType=image/bmp;image/g3fax;image/gif;image/x-fits;image/pcx;image/x-portable-anymap;image/x-portable-bitmap;image/x-portable-graymap;image/x-portable-pixmap;image/x-psd;image/x-sgi;image/x-tga;image/x-xbitmap;image/x-xwindowdump;image/x-xcf;image/x-compressed-xcf;image/tiff;image/jpeg;image/x-psp;image/png;image/x-icon;image/x-xpixmap;image/svg+xml;image/x-wmf;
 X-Desktop-File-Install-Version=0.16
+ACER-SLATE-WIDGET-ICON=/usr/share/acer-widgets/photowidget/icons/photowidget_preview.png
+ACER-SLATE-WIDGET-PATH=/usr/share/acer-widgets/photowidget/WidgetFactory.qml
+ACER-SLATE-WIDGET-NAME=Photo widget
+ACER-SLATE-WIDGET-MULTIPLE=0
+ACER-CATEGORY=Entertainment
