New mediagrid layout and make albums the new landing page

--- a/meego-app-photos.desktop
+++ b/meego-app-photos.desktop
@@ -4,7 +4,7 @@ Version=1.0
 Name=MeeGo Photo Viewer
 Comment=View Photos
 GenericName=Photo Viewer
-Exec=meego-qml-launcher --opengl --cmd showPhoto --cdata %f --fullscreen --app meego-app-photos
+Exec=meego-qml-launcher --opengl --cmd showAlbum --cdata %f --fullscreen --app meego-app-photos
 Terminal=false
 X-MultipleArgs=false
 Type=Application
