--- a/meego-app-photos.desktop
+++ b/meego-app-photos.desktop
@@ -1,10 +1,9 @@
-
 [Desktop Entry]
 Version=1.0
 Name=MeeGo Photo Viewer
 Comment=View Photos
 GenericName=Photo Viewer
-Exec=meego-qml-launcher --opengl --cmd showAlbum --cdata %f --fullscreen --app meego-app-photos
+Exec=meego-qml-launcher --opengl --cmd showTimeline --cdata %f --fullscreen --app meego-app-photos
 Terminal=false
 X-MultipleArgs=false
 Type=Application
